tests/snapshots/examples_fixtures/type_system__failing__84_match_tuple_gap_no_fallback.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/84_match_tuple_gap_no_fallback.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E015]: NON-EXHAUSTIVE MATCH

Match is non-exhaustive without an unguarded catch-all arm.

  --> examples/type_system/failing/84_match_tuple_gap_no_fallback.flx:4:1
  |
4 | match t {
  | ^^^^^^^^^
5 |     (1, true) -> 1,
  | ^^^^^^^^^^^^^^^^^^^
6 |     (2, false) -> 2
  | ^^^^^^^^^^^^^^^^^^^
7 | };
  | ^

Hint:
  Add an unguarded `_ -> ...` arm for conservative exhaustive coverage.
== stdout ==
<not executed>
